[package]
name = "memkv"
version = "0.1.0"
authors = ["guangfuhe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=["dbcore"]

[dependencies]
dbcore = {path="dbcore"}
clap = { git = "https://github.com/clap-rs/clap/" }
rustyline = "6.0.0"
rustyline-derive = "0.3.0"